# YAN-Snake

./: CMakeLists.txt  README.md
src/: constants.h  main.cpp
src/application/: ActionManager.cpp  ActionManager.h  Application.cpp  Application.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/game/: Game.cpp  Game.h  Grid.cpp  Grid.h  Snake.cpp  Snake.h  TileRenderer.cpp  TileRenderer.h
